<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView

            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="SocalBeach4Life"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in to get started"
            android:textAlignment="center"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:hint="Email"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button_login"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="25dp" />

        <TextView

            android:id="@+id/loginquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="Don't have an account?"
            android:textColor="@android:color/black"
            android:textSize="20dp"

            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/RegisterButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:letterSpacing="0"
            android:text="Register"
            android:textAllCaps="false"
            android:textSize="25dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>