<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#808080"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView

            android:id="@+id/Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="Name"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:hint="Email"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="Password (At least 8 characters)"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <EditText
            android:id="@+id/register_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="#33656565"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="Repeat Password "
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button_register"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:letterSpacing="0"
            android:text="Register"

            android:textAllCaps="false"
            android:textSize="25dp" />

        <TextView

            android:id="@+id/signupquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="Already signed up?"
            android:textColor="@color/black"
            android:textSize="20dp"

            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/button_login"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:letterSpacing="0"


            android:text="Login"
            android:textAllCaps="false"
            android:textSize="25dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>